  (Jeremy Yallop, review by Gabriel Radanne)
- PR#6691: install .cmt[i] files for stdlib and compiler-libs
  (David Sheets, request by Gabriel Radanne)
- PR#6742: remove duplicate virtual_flag information from Tstr_class
- PR#6719: improve Buffer.add_channel when not enough input is available
  (Simon Cruanes)
* PR#6816: reject integer and float literals followed by alphanum
  (Hugo Heuzard)
- GPR#111: `(f [@taillcall]) x y` warns if `f x y` is not a tail-call
  (Simon Cruanes)
- GPR#118: ocamldep -allow-approx: fallback to a lexer-based approximation
  (Frédéric Bour)
- GPR#137: add untypeast.ml (in open recursion style) to compiler-libs
  (Gabriel Radanne)
- GPR#142: add a CAMLdrop macro for undoing CAMLparam*/CAMLlocal*
- GPR#145: speeedup bigarray access by optimizing Cmmgen.bigarray_indexing
  (Vladimir Brankov, review by Gabriel Scherer)
- GPR#147: [type 'a result = Ok of 'a | Error of 'b] in Pervasives
  (Yaron Minsky)
- GPR#171: allow custom warning printers / catchers
  (Benjamin Canou, review by Damien Doligez)

OCaml 4.02.2:
-------------

Language features:
- PR#6583: add a new class of binary operators with the same syntactic
  precedence as method calls; these operators start with # followed
  by a non-empty sequence of operator symbols (for instance #+, #!?).
  It is also possible to use '#' as part of these extra symbols
  (for instance ##, or #+#); this is rejected by the type-checker,
  but can be used e.g. by ppx rewriters.
- PR#6016: add a "nonrec" keyword for type declarations
  (Jérémie Dimino)

Compilers:
- PR#6475: accept -o in ocamlc when compiling C files
  (Vincent Laporte, Peter Zotov)
- PR#6600: make -short-paths faster by building the printing map
  incrementally (Jacques Garrigue)
- PR#6642: replace $CAMLORIGIN in -ccopt with the path to cma or cmxa
  (Peter Zotov, Gabriel Scherer, review by Damien Doligez)
- GPR#159: Better locations for structure/signature items
  (Leo White)

Toplevel and debugger: